fix: 处理回退 JDBC 驱动加载异常